--- a/FakeMaker/FakeMaker.csproj
+++ b/FakeMaker/FakeMaker.csproj
@@ -8,4 +8,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FakeMaker.Core\FakeMaker.Core.csproj" />
+  </ItemGroup>
+
 </Project>
